# nampu

./: README.md
3rd-lib/h264bitstream-0.1.6/: Makefile.am  autogen.sh  bs.c  bs.h  config.h  config.h.in  config.sh  config.status  configure  configure.in  h264_sei.c  h264_sei.h  h264_stream.c  h264_stream.h
3rd-lib/h264bitstream-0.1.6/.deps/: libh264bitstream_a-bs.Po  libh264bitstream_a-h264_sei.Po  libh264bitstream_a-h264_stream.Po
3rd-lib/h264bitstream-0.1.6/win32/: h264_analyze.c  h264bitstream.sln  h264bitstream.vcproj  stdint.h
3rd-lib/netembryo-0.1.1/: INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
3rd-lib/netembryo-0.1.1/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
3rd-lib/netembryo-0.1.1/m4/: attributes.m4  lsc_debug.m4  with_pkg.m4
3rd-lib/netembryo-0.1.1/netembryo/: rtsp.h  url.h  wsocket-internal.h  wsocket.h
3rd-lib/netembryo-0.1.1/pkgconfig/: Makefile  Makefile.am  Makefile.in  libnetembryo-uninstalled.pc  libnetembryo-uninstalled.pc.in  libnetembryo.pc  libnetembryo.pc.in
3rd-lib/netembryo-0.1.1/tests/: Makefile  Makefile.am  Makefile.in  test_hostname.c  test_sock.c  test_url.c
3rd-lib/netembryo-0.1.1/utils/: Makefile  Makefile.am  Makefile.in  rtsp.c  url.c
3rd-lib/netembryo-0.1.1/wsocket/: Makefile  Makefile.am  Makefile.in  Sock.c  get_info.c  multicast.c  sock_ntop_host.c  socket.c  ssl.c  ssl.h
nmp-cms/: Makefile  Makefile.am  Makefile.def  Rules.mk  autogen.sh  config.h  config.h.in  configure  configure.ac  libtool  readme.txt  set_env.sh
nmp-cms/core/: main.c
nmp-cms/core/msg/: nmp_message.c
nmp-cms/docs/: CMS与AMS通讯协议-v1.0.doc  CMS与BSS通讯协议-v0.21.doc  CMS与BSS通讯协议-v0.27.doc  CMS与BSS通讯协议-v0.28.doc  CMS与BSS通讯协议-v0.29.doc  CMS与BSS通讯协议-v0.30.doc  CU与CMS通讯协议-v0.39.doc  CU与CMS通讯协议-v0.42.doc  CU与CMS通讯协议-v0.43.doc  PU与平台通讯协议-v0.53.doc  jxj_platform_db.sql  佳信捷视频监控平台数据库文档v0.13.doc  佳信捷视频监控平台数据库文档v0.16.doc  佳信捷软解码器_13.04.02.doc  平台项目（库）说明.txt  项目svn_liuxw.txt  项目svn_zouc.txt
nmp-cms/docs/智能分析/: CU与CMS牧业分析通讯协议v0.14.doc  IVS与CMS通讯协议v0.4.doc  PU与CMS牧业分析配置通信协议v0.11.doc
nmp-cms/include/: nmp_args.h  nmp_message.h  nmp_ports.h  nmp_proto.h  nmp_share_struct.h  nmp_sysctl.h  nmp_version.h
nmp-cms/include/message/: nmp_msg_ams.h  nmp_msg_bss.h  nmp_msg_cu.h  nmp_msg_ivs.h  nmp_msg_mds.h  nmp_msg_mss.h  nmp_msg_pu.h  nmp_msg_share.h  nmp_msg_struct.h  nmp_msg_tw.h
nmp-cms/lib/: Makefile
nmp-cms/lib/db_connect_pool/: Makefile
nmp-cms/lib/encrypt/: Makefile
nmp-cms/lib/include/: nmp_wdd.h  nmp_xml.h  search_device.h
nmp-cms/lib/process_xml/: Makefile
nmp-cms/lib/search_device/: Makefile
nmp-cms/lib/tvwall/: Makefile
nmp-cms/mod/: Makefile
nmp-cms/mod/include/: nmp_mods.h  nmp_mysql_defs.h  nmp_shared.h
nmp-cms/mod/mod_ams/: nmp_ams_mh.c  nmp_ams_policy.c  nmp_ams_policy.h
nmp-cms/mod/mod_bss/: nmp_bss_insert.c  nmp_bss_struct.h  nmp_mod_bss.c  nmp_mod_bss.h  nmp_search_pu.h
nmp-cms/mod/mod_cu/: nmp_cu_insert.c  nmp_cu_msg.h  nmp_cu_struct.h  nmp_mod_cu.c  nmp_mod_cu.h
nmp-cms/mod/mod_dbs/: gb2312_map_unicode.c  nmp_dbs_fun.c  nmp_dbs_fun.h  nmp_dbs_insert.c  nmp_dbs_mh_bss.c  nmp_dbs_mh_cu.c  nmp_dbs_mh_tw.c  nmp_dbs_msgmap.h  nmp_mod_dbs.c  nmp_mod_dbs.h  nmp_mysql_fun.c  nmp_mysql_fun.h
nmp-cms/mod/mod_ivs/: nmp_ivs_mh.c  nmp_ivs_struct.h  nmp_mod_ivs.c  nmp_mod_ivs.h
nmp-cms/mod/mod_log/: nmp_log_defs.h  nmp_log_insert.c  nmp_log_mh.c  nmp_log_mysql_fun.c  nmp_log_mysql_fun.h  nmp_mod_log.c
nmp-cms/mod/mod_mds/: nmp_mds_mh.c
nmp-cms/mod/mod_mss/: nmp_mod_mss.c  nmp_mss_struct.h
nmp-cms/mod/mod_pu/: nmp_mod_pu.c  nmp_mod_pu.h  nmp_pu_msg.c
nmp-cms/mod/mod_tw/: nmp_mod_tw.h  nmp_tw_insert.c
nmp-cms/mod/mod_wdd/: nmp_wdd_insert.c  nmp_wdd_mh.c
nmp-cms/mod/shared/: nmp_mods.c  nmp_res_ctl.c  nmp_shared.c
nmp-cms/proto/: Makefile  nmp_proc_xml.c  nmp_proto.c
nmp-cms/src/core/: Makefile  Makefile.am  Makefile.in  Makfile.deps  O_TARG  main.c  nmp_args.c  nmp_sysctl.c
nmp-cms/src/lib/: L_TARG  Makefile
nmp-cms/src/mod/: Makefile  Makefile.am  Makefile.in  Makfile.deps  O_TARG
nmp-cms/src/proto/: Makefile  Makefile.am  Makefile.in  Makfile.deps  O_TARG  nmp_proc_xml.c  nmp_proc_xml.h  nmp_proto.c
nmp-framework/: Makefile.am  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  nmpframework.pc.in
nmp-framework/include/: nmp_afx.h  nmp_appcore.h  nmp_appmod.h  nmp_appobj.h  nmp_busslot.h  nmp_data.h  nmp_etable.h  nmp_islot.h  nmp_list_head.h  nmp_memory.h  nmp_mod_access.h  nmp_modio.h  nmp_msg_id_table.h  nmp_msgbus.h  nmp_msgengine.h  nmp_object.h  nmp_sysmsg.h
nmp-framework/src/: Makefile.am
nmp-framework/src/app/: nmp_appcore.c  nmp_appmod.c  nmp_appobj.c  nmp_mod_access.c  nmp_object.c
nmp-framework/src/islot/: nmp_busslot.c  nmp_islot.c  nmp_modio.c
nmp-framework/src/mm/: nmp_memory.c
nmp-framework/src/msg/: nmp_data.c  nmp_etable.c  nmp_msgbus.c  nmp_msgengine.c  (+1 more)
nmp-lib/nmp-search-device/: config.h  config.status  configure  configure.ac
nmp-lib/nmpev/: Makefile.am  autogen.sh  config.h  config.h.in  configure  configure.ac
nmp-lib/nmplib/: Makefile.am  autogen.sh  config.h  configure  configure.ac
nmp-lib/nmpmb/: Makefile.am  autogen.sh  config.h  config.h.in  configure  configure.in
nmp-lib/nmpnet/: Makefile.am  config.h  config.h.in  config.status  configure  configure.ac
nmp-lib/nmpxml/: Makefile.am  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libnmpxml.pc  libnmpxml.pc.in  libtool
nmp-lib/rtsp-client/: Makefile.am  config.h  config.h.in  config.status  configure  configure.ac
nmp-lib/rtsp-parser/: Makefile.am  config.h  config.h.in  config.status  configure  configure.ac
nmp-lib/rtsp-server/: Makefile.am  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
nmp-lib/share/: Makefile.am  config.h  config.h.in  config.status  configure  configure.ac  libnmpshare.pc  libnmpshare.pc.in  libtool  nmpshare.pc.in
(+1382 files in other folders)
