#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(libnmpxml, 1.1.0, bugs@himickey.com)
AC_CONFIG_SRCDIR([test/test.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE(libnmpxml, 1.1.0)

: ${CFLAGS=""}

##################################################################
PACKAGE=libnmpxml
AC_MSG_NOTICE([$PACKAGE_NAME-$PACKAGE_VERSION		A xml library for XXXXXXXXXXXXXXXXXXXXX.])
LIBNMPXML_MAJOR_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f1)
LIBNMPXML_MINOR_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f2)
LIBNMPXML_MICRO_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f3)
LIBNMPXML_EXTRA_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f4)

LIBNMPXML_SO_VERSION=`expr $LIBNMPXML_MINOR_VERSION + $LIBNMPXML_MAJOR_VERSION`:$LIBNMPXML_MICRO_VERSION:$LIBNMPXML_MINOR_VERSION
#LIBNMPXML_SO_VERSION for lib/Makefile.am
AC_SUBST(LIBNMPXML_SO_VERSION, $LIBNMPXML_SO_VERSION)

LIBNMPXML_VERSION=${LIBNMPXML_MAJOR_VERSION}.${LIBNMPXML_MINOR_VERSION}.${LIBNMPXML_MICRO_VERSION}

if test -n "$LIBNMPXML_EXTRA_VERSION" ; then
	LIBNMPXML_VERSION="${LIBNMPXML_VERSION}.${LIBNMPXML_EXTRA_VERSION}"
fi

AC_SUBST(LIBNMPXML_VERSION)
AC_DEFINE_UNQUOTED(LIBNMPXML_MAJOR_VERSION,$LIBNMPXML_MAJOR_VERSION, [major version])
AC_DEFINE_UNQUOTED(LIBNMPXML_MINOR_VERSION,$LIBNMPXML_MINOR_VERSION, [minor version])
AC_DEFINE_UNQUOTED(LIBNMPXML_MICRO_VERSION,$LIBNMPXML_MICRO_VERSION, [micro version])
AC_DEFINE_UNQUOTED(LIBNMPXML_VERSION,"$LIBNMPXML_VERSION",[LIBNMPXML version number])

##################################################################


# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_PROG_RANLIB
AC_PROG_LIBTOOL


# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stddef.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_INT8_T
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STRTOD
AC_CHECK_FUNCS([memmove memset strchr strdup strerror strrchr strstr strtol])


dnl initialize pkg-config so that we can use it within if else fi statements.
PKG_PROG_PKG_CONFIG()

AC_MSG_NOTICE([FOUND CFLAGS DEFINES : "$CFLAGS"])
AC_MSG_NOTICE([FOUND CPPFLAGS DEFINES : "$CPPFLAGS"])
AC_MSG_NOTICE([FOUND LIBS DEFINES : "$LIBS"])


AC_OUTPUT([Makefile
	   libnmpxml.pc
	   src/Makefile
	   test/Makefile])
