#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(librtsp, 0.0.1, heguijiss@163.com)
AC_CONFIG_SRCDIR(src/test/main.c)
AC_CONFIG_HEADERS(config.h)
AC_CONFIG_MACRO_DIR(m4)
AM_INIT_AUTOMAKE(foreign)

# PACKAGE=librtsp
# AC_MSG_NOTICE([$PACKAGE_NAME-$PACKAGE_VERSION		A library for xxxxxx.])
# LIBRTSP_MAJOR_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f1)
# LIBRTSP_MINOR_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f2)
# LIBRTSP_MICRO_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f3)
# LIBRTSP_EXTRA_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f4)

# LIBRTSP_SO_VERSION=`expr $LIBRTSP_MINOR_VERSION + $LIBRTSP_MAJOR_VERSION`:$LIBRTSP_MICRO_VERSION:$LIBRTSP_MINOR_VERSION
# AC_SUBST(LIBRTSP_SO_VERSION, $LIBRTSP_SO_VERSION)

# LIBRTSP_VERSION=${LIBRTSP_MAJOR_VERSION}.${LIBRTSP_MINOR_VERSION}.${LIBRTSP_MICRO_VERSION}

# if test -n "$LIBRTSP_EXTRA_VERSION" ; then
#	LIBRTSP_VERSION="${LIBRTSP_VERSION}.${LIBRTSP_EXTRA_VERSION}"
# fi

# AC_SUBST(LIBRTSP_VERSION)
# AC_DEFINE_UNQUOTED(LIBRTSP_MAJOR_VERSION,$LIBRTSP_MAJOR_VERSION, [major version])
# AC_DEFINE_UNQUOTED(LIBRTSP_MINOR_VERSION,$LIBRTSP_MINOR_VERSION, [minor version])
# AC_DEFINE_UNQUOTED(LIBRTSP_MICRO_VERSION,$LIBRTSP_MICRO_VERSION, [micro version])
# AC_DEFINE_UNQUOTED(LIBRTSP_VERSION,"$LIBRTSP_VERSION",[LIBRTSP version number])

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_PROG_RANLIB
# AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stddef.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([bzero memmove memset socket strcasecmp strchr strerror strpbrk strrchr strstr strtol strtoul])

PKG_PROG_PKG_CONFIG()

AC_MSG_NOTICE([FOUND CFLAGS DEFINES : "$CFLAGS"])
AC_MSG_NOTICE([FOUND CPPFLAGS DEFINES : "$CPPFLAGS"])
AC_MSG_NOTICE([FOUND LIBS DEFINES : "$LIBS"])

AC_OUTPUT([Makefile
		   src/lib/Makefile
		   src/test/Makefile])

#		   librtsp.pc
