AUTOMAKE_OPTIONS=foreign
lib_LIBRARIES=libnmpsearchdevice.a

libnmpsearchdevice_a_SOURCES=search_device.c
libnmpsearchdevice_a_CFLAGS=-Wall -g -fno-inline -fstack-protector -fPIC
libnmpsearchdevice_a_CXXFLAGS=

libnmpsearchdeviceincludedir=$(prefix)/include/nampu
libnmpsearchdeviceinclude_HEADERS=$(top_srcdir)/include/*.h 
