AUTOMAKE_OPTIONS=foreign
lib_LIBRARIES=libnmpgev.a
libnmpgev_a_SOURCES=nmpev.c nmpevsched.c

#libnmpgev_la_LIBADD=
#libnmpgev_la_LDFLAGS=
#libnmpgev_la_LIBFLAGS=
libnmpgev_la_CFLAGS=-Wall -g -fno-inline -fstack-protector -fPIC
#libnmpgev_la_CXXFLAGS=

libnmpgevincludedir=$(prefix)/include/nampu
libnmpgevinclude_HEADERS=$(top_srcdir)/include/*.h
