AUTOMAKE_OPTIONS=foreign
lib_LIBRARIES=libnmpev.a
libnmpev_a_SOURCES=nmpev.c nmpevsched.c

#libnmpev_la_LIBADD=
#libnmpev_la_LDFLAGS=
#libnmpev_la_LIBFLAGS=
libnmpev_la_CFLAGS=-Wall -g -fno-inline -fstack-protector -fPIC
#libnmpev_la_CXXFLAGS=

libnmpgevincludedir=$(prefix)/include/nampu/nmpev
libnmpgevinclude_HEADERS=$(top_srcdir)/include/*.h
